--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@types/react": "^17.0.50",
     "cors": "^2.8.5",
+    "debounce": "^1.2.1",
     "express": "^4.17.1",
     "nodemon": "^2.0.12",
     "react": "^17.0.1",
@@ -30,6 +31,7 @@
   },
   "devDependencies": {
     "@hot-loader/react-dom": "^17.0.1",
+    "@types/debounce": "^1.2.3",
     "@types/jest": "^28.1.6",
     "@types/react-dom": "^18.2.13",
     "axios": "^1.5.1",
